# babel

./: .gitmodules  Cargo.toml  Containerfile  Containerfile.rocm  LICENSE  README.md  build.rs  pyproject.toml  run.sh
src/: main.rs
src/babel/: __main__.py
src/bindings/: ggml.rs  ggml_alloc.rs  ggml_backend.rs  ggml_cpu.rs  llama.rs  whisper.rs
