[build-system]
requires = [
  "setuptools >= 75.8.0",
  "setuptools-rust >= 1.10.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "babel"
description = "Speech recognition and transcription."
version = "0.1.0"
dependencies = [
  "openai-whisper >= 20240930",
]
requires-python = ">=3.11"
authors = [
  {name = "Rodrigo Duran", email = "rads2995@gmail.com"},
]
maintainers = [
  {name = "Rodrigo Duran", email = "rads2995@gmail.com"},
]
readme = "README.md"
license.file = "LICENSE"
keywords = ["speech", "text", "transcription"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/rads2995/babel.git"
"Bug Tracker" = "https://github.com/rads2995/babel/issues"
Changelog = "https://github.com/rads2995/babel/CHANGELOG.md"

[tool.mypy]
files = "src"
ignore_missing_imports = true
strict_optional = true
